--- a/src/loading_screen/loadingScreen.module.css
+++ b/src/loading_screen/loadingScreen.module.css
@@ -103,6 +103,10 @@ div.loadingBarValue {
   background:
    linear-gradient(#000 0 0) 0/0% no-repeat
     transparent;
+  mask: linear-gradient(90deg,#000 70%,#0000 0) 0/10%;
+  background:
+   linear-gradient(#000 0 0) 0/0% no-repeat
+    transparent;
   animation: loading 3s 1 steps(12);
 }
 
